force-app/main/default/objects/OIP_DiagnosticsLog__c/OIP_DiagnosticsLog__c.object-meta.xml
<CustomObject>
    <fullName>OIP_DiagnosticsLog__c</fullName>
    <label>Diagnostics Log</label>
    <pluralLabel>Diagnostics Logs</pluralLabel>
    <nameField>
        <displayFormat>LOG-{0000}</displayFormat>
        <label>Diagnostics Log Number</label>
        <startingNumber>1</startingNumber>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>