force-app/main/default/objects/OIP_DiagnosticsLog__c/fields/OIP_Category__c.field-meta.xml
<CustomField>
    <fullName>OIP_Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Governor</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Dependency</fullName>
            </value>
            <value>
                <fullName>Deployment</fullName>
            </value>
            <value>
                <fullName>Automation</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>