force-app/main/default/objects/OIP_DiagnosticsLog__c/fields/OIP_ComponentRef__c.field-meta.xml
<CustomField>
    <fullName>OIP_ComponentRef__c</fullName>
    <label>Component Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>