force-app/main/default/objects/OIP_DiagnosticsLog__c/fields/OIP_DebugSessionId__c.field-meta.xml
<CustomField>
    <fullName>OIP_DebugSessionId__c</fullName>
    <label>Debug Session</label>
    <referenceTo>OIP_DebugSession__c</referenceTo>
    <relationshipLabel>Log Entries</relationshipLabel>
    <relationshipName>LogEntries</relationshipName>
    <type>Lookup</type>
</CustomField>