force-app/main/default/objects/OIP_DiagnosticsLog__c/fields/OIP_Editable__c.field-meta.xml
<CustomField>
    <fullName>OIP_Editable__c</fullName>
    <label>Editable</label>
    <defaultValue>false</defaultValue>
    <required>true</required>
    <type>Checkbox</type>
</CustomField>