force-app/main/default/objects/OIP_DiagnosticsLog__c/fields/OIP_LogLevel__c.field-meta.xml
<CustomField>
    <fullName>OIP_LogLevel__c</fullName>
    <label>Log Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DEBUG</fullName>
            </value>
            <value>
                <fullName>INFO</fullName>
            </value>
            <value>
                <fullName>WARN</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
            <value>
                <fullName>FATAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>