force-app/main/default/objects/OIP_DiagnosticsLog__c/fields/OIP_Message__c.field-meta.xml
<CustomField>
    <fullName>OIP_Message__c</fullName>
    <label>Message</label>
    <length>32768</length>
    <required>true</required>
    <type>LongTextArea</type>
</CustomField>