force-app/main/default/objects/OIP_DiagnosticsLog__c/fields/OIP_ServiceName__c.field-meta.xml
<CustomField>
    <fullName>OIP_ServiceName__c</fullName>
    <label>Service Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>