force-app/main/default/objects/OIP_DiagnosticsLog__c/fields/OIP_StackHash__c.field-meta.xml
<CustomField>
    <fullName>OIP_StackHash__c</fullName>
    <label>Stack Hash</label>
    <length>32</length>
    <type>Text</type>
</CustomField>