force-app/main/default/objects/OIP_DiagnosticsLog__c/fields/OIP_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>OIP_Timestamp__c</fullName>
    <label>Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>